Created Members with name

--- a/Garage3/appsettings.json
+++ b/Garage3/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Garage3Context": "Server=(localdb)\\mssqllocaldb;Database=Garage3Context-fd56ba86-9723-4407-9487-1ecff7328e6d;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
