--- a/Garage3.Data/Garage3.Data.csproj
+++ b/Garage3.Data/Garage3.Data.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Garage3.Entities\Garage3.Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
