--- a/Garage3/Garage3.csproj
+++ b/Garage3/Garage3.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Models\VehicleViewModels\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
